public/stylesheets/main.css
body{
	margin: 0px;
}

div{
	display: flow-root;
}

ul.nav-bar{
	margin: 0px;
  background-color: #E1B1AF;
  padding: 8px;
  z-index: 1;
	text-align: center;
}

li.nav-bar{
  display: inline;
  color: white;
  padding: 8px 16px;
}

.nav-link{
  font-size: 24px;
  padding-left: 20px;
  padding-right: 20px;
	color: white;
	text-decoration: none;
}

.float-right{
	float: right;
}

.float-left{
	float: left;
}

.search-bar{
	width: 30%;
	margin: auto;
	text-align: center;
	padding: 2px 2px;
}

input.search-bar{
	height: 25px;
	font-size: 16px;
}

.fa-search{
	font-size: 21px;
}

a.search-icon{
	padding: 0px 10px 0px 10px;
}

.heading-area{
	height: 500px;
	width: 100%;
	background-color: #D8E5F1;
	text-align: center;
	border: 0;
}

